#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([SymConfigManager], [0.0.1], [symraingit@163.com])
AC_CONFIG_SRCDIR([sympropertymanage.h])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(SymConfigManager,0.0.1)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_CHECK_LIB(pthread, pthread_create) 
AC_PROG_RANLIB
# Checks for library functions.

AC_OUTPUT([Makefile])
